Reworked implementation of content managers